--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-hook-form": "^7.20.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-typewriter": "^3.0.1",
+    "react-spring": "^9.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
