--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
